[package]
name = "use-authn"
description = "Authentication metadata primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["authn", "security", "login", "metadata"]
categories = ["authentication", "development-tools", "data-structures"]

[lints]
workspace = true
