[package]
name = "use-authz"
description = "Authorization metadata primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["authz", "security", "permission", "role"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
