[package]
name = "use-crypto"
description = "Cryptographic algorithm and key metadata labels for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["crypto", "security", "algorithm", "metadata"]
categories = ["cryptography", "development-tools", "data-structures"]

[lints]
workspace = true
