[package]
name = "use-cvss"
description = "CVSS severity, vector, and score metadata primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cvss", "security", "severity", "score"]
categories = ["development-tools", "data-structures", "parsing"]

[lints]
workspace = true
