[package]
name = "use-cwe"
description = "CWE weakness identifier and category primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cwe", "security", "weakness", "identifier"]
categories = ["development-tools", "data-structures", "parsing"]

[lints]
workspace = true
