[package]
name = "use-secret"
description = "Secret classification, masking, and secret-reference primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["secret", "security", "redaction", "masking"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
