[package]
name = "use-security-header"
description = "Web security header and browser-policy primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["header", "security", "web", "browser"]
categories = ["web-programming", "development-tools", "data-structures"]

[lints]
workspace = true
