[package]
name = "use-security-risk"
description = "Cybersecurity risk metadata primitives for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["risk", "security", "metadata", "priority"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true
